@@ -577,8 +577,6 @@ syn.cart <- function(y, x, xp, smoothing = "", proper = FALSE,
 
 syn.ctree <- function(y, x, xp, smoothing = "", proper = FALSE, minbucket = 5, 
                       mincriterion = 0.9, ...)
-                      # teststat = "max", testtype = "Univariate", 
-                      
 { 
   if (proper == TRUE) {
     s <- sample(length(y), replace = truehist())
@@ -587,32 +585,75 @@ syn.ctree <- function(y, x, xp, smoothing = "", proper = FALSE, minbucket = 5,
   }
   
   for (i in which(sapply(x, class) != sapply(xp,class))) xp[,i] <-
-  eval(parse(text = paste0("as.", class(x[,i]), "(xp[,i])", sep = "")))
-  # Fit a tree
-  datact     <- ctree(y ~ ., data = as.data.frame(cbind(y,x)), 
-    controls = ctree_control(minbucket = minbucket, mincriterion = mincriterion, 
-                             # teststat = teststat, testtype = testtype, 
-                             ...))
-  fit.nodes  <- where(datact)
+      eval(parse(text = paste0("as.", class(x[,i]), "(xp[,i])", sep = "")))
+
+    # Fit a tree
+  datact     <- partykit::ctree(y ~ ., data = as.data.frame(cbind(y, x)), 
+                  control = partykit::ctree_control(minbucket = minbucket, 
+                                                    mincriterion = mincriterion, ...))
+  
+  fit.nodes  <- predict(datact, type = "node")
   nodes      <- unique(fit.nodes)
   no.nodes   <- length(nodes)
-  pred.nodes <- where(datact, newdata = xp)
+  pred.nodes <- predict(datact, type = "node", newdata = xp)
   # Get row numbers for predicted by sampling with replacement from existing data
   rowno      <- 1:length(y)
   newrowno   <- vector("integer", nrow(xp))
-
+  
   for (i in nodes) {
     newrowno[pred.nodes == i] <- sample(rowno[fit.nodes == i],
-                                      length(newrowno[pred.nodes == i]),
-                                      replace = TRUE)
+                                        length(newrowno[pred.nodes == i]),
+                                        replace = TRUE)
   }
   new <- y[newrowno]
+  
   if (!is.factor(y) & smoothing != "") new <- 
     syn.smooth(new, y, smoothing = smoothing )
   
   return(list(res = new, fit = datact))
 }
 
+
+# ###-----syn.ctree----------------------------------------------------------
+# 
+# syn.ctree.party <- function(y, x, xp, smoothing = "", proper = FALSE, minbucket = 5, 
+#                       mincriterion = 0.9, ...)
+#                       # teststat = "max", testtype = "Univariate", 
+#                       
+# { 
+#   if (proper == TRUE) {
+#     s <- sample(length(y), replace = truehist())
+#     y <- y[s]
+#     x <- x[s, , drop = FALSE]
+#   }
+#   
+#   for (i in which(sapply(x, class) != sapply(xp,class))) xp[,i] <-
+#   eval(parse(text = paste0("as.", class(x[,i]), "(xp[,i])", sep = "")))
+#   # Fit a tree
+#   datact     <- ctree(y ~ ., data = as.data.frame(cbind(y, x)), 
+#     controls = ctree_control(minbucket = minbucket, mincriterion = mincriterion, 
+#                              # teststat = teststat, testtype = testtype, 
+#                              ...))
+#   fit.nodes  <- where(datact)
+#   nodes      <- unique(fit.nodes)
+#   no.nodes   <- length(nodes)
+#   pred.nodes <- where(datact, newdata = xp)
+#   # Get row numbers for predicted by sampling with replacement from existing data
+#   rowno      <- 1:length(y)
+#   newrowno   <- vector("integer", nrow(xp))
+# 
+#   for (i in nodes) {
+#     newrowno[pred.nodes == i] <- sample(rowno[fit.nodes == i],
+#                                       length(newrowno[pred.nodes == i]),
+#                                       replace = TRUE)
+#   }
+#   new <- y[newrowno]
+#   if (!is.factor(y) & smoothing != "") new <- 
+#     syn.smooth(new, y, smoothing = smoothing )
+#   
+#   return(list(res = new, fit = datact))
+# }
+# 
 
 ###-----syn.survctree------------------------------------------------------
 
@@ -638,11 +679,11 @@ syn.survctree <- function(y, yevent, x, xp, proper = FALSE, minbucket = 5, ...)
   # Fit a tree  
   datact     <- ctree(Surv(y, yevent0) ~ ., 
                       data = as.data.frame(cbind(y, yevent0, x)),
-                      controls = ctree_control(minbucket = minbucket, ...))
-  fit.nodes  <- where(datact)
+                      control = ctree_control(minbucket = minbucket, ...))
+  fit.nodes  <- predict(datact, type = "node")
   nodes      <- unique(fit.nodes)
   no.nodes   <- length(nodes)
-  pred.nodes <- where(datact, newdata = xp)
+  pred.nodes <- predict(datact, type = "node", newdata = xp)
   # Get row numbers for predicted by sampling
   # with replacement from existing data
   rowno      <- 1:length(y)
